--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -55,5 +55,192 @@
   "currency": {
     "symbol": "ரூ.",
     "format": "ரூ. {amount}"
+  },
+  "users": {
+    "title": "பயனர் மேலாண்மை",
+    "description": "கணினி பயனர்கள், பாத்திரங்கள் மற்றும் அனுமதிகளை நிர்வகிக்கவும்",
+    "table": {
+      "user": "பயனர்",
+      "role": "பாத்திரம்",
+      "contact": "தொடர்பு",
+      "status": "நிலை",
+      "lastLogin": "கடைசி உள்நுழைவு",
+      "actions": "செயல்கள்",
+      "noContact": "தொடர்பு இல்லை",
+      "neverLoggedIn": "ஒருபோதும் உள்நுழையவில்லை"
+    },
+    "search": {
+      "placeholder": "பெயர் அல்லது பயனர்பெயரால் தேடவும்..."
+    },
+    "filters": {
+      "role": "பாத்திரத்தால் வடிகட்டவும்",
+      "status": "நிலையால் வடிகட்டவும்"
+    },
+    "roles": {
+      "owner": "உரிமையாளர்",
+      "cashier": "காசாளர்",
+      "helper": "உதவியாளர்"
+    },
+    "status": {
+      "active": "செயலில்",
+      "inactive": "செயலில் இல்லை"
+    },
+    "actions": {
+      "create": "பயனரைச் சேர்க்கவும்",
+      "view": "விவரங்களைப் பார்க்கவும்",
+      "edit": "பயனரைத் திருத்தவும்",
+      "delete": "பயனரை நீக்கவும்",
+      "resetPassword": "கடவுச்சொல்லை மீட்டமைக்கவும்",
+      "activate": "செயல்படுத்தவும்",
+      "deactivate": "செயலிழக்கச் செய்யவும்"
+    },
+    "messages": {
+      "loadError": "பயனர்களை ஏற்றுவதில் தோல்வி",
+      "createError": "பயனரை உருவாக்குவதில் தோல்வி",
+      "updateError": "பயனரைப் புதுப்பிப்பதில் தோல்வி",
+      "deleteError": "பயனரை நீக்குவதில் தோல்வி",
+      "statusUpdateError": "பயனர் நிலையைப் புதுப்பிப்பதில் தோல்வி",
+      "passwordResetError": "கடவுச்சொல்லை மீட்டமைப்பதில் தோல்வி",
+      "userCreated": "பயனர் வெற்றிகரமாக உருவாக்கப்பட்டார்",
+      "userUpdated": "பயனர் வெற்றிகரமாகப் புதுப்பிக்கப்பட்டார்",
+      "userDeleted": "பயனர் வெற்றிகரமாக நீக்கப்பட்டார்",
+      "statusUpdated": "பயனர் நிலை வெற்றிகரமாகப் புதுப்பிக்கப்பட்டது",
+      "passwordReset": "கடவுச்சொல் வெற்றிகரமாக மீட்டமைக்கப்பட்டது",
+      "accessDenied": "அணுகல் மறுக்கப்பட்டது. உரிமையாளர்கள் மட்டுமே பயனர்களை நிர்வகிக்க முடியும்."
+    },
+    "pagination": {
+      "total": "மொத்தம் {total} பயனர்களில் {start}-{end} காட்டப்படுகிறது"
+    },
+    "create": {
+      "title": "புதிய பயனரை உருவாக்கவும்",
+      "submit": "பயனரை உருவாக்கவும்",
+      "sections": {
+        "basicInfo": "அடிப்படை தகவல்",
+        "authentication": "அனுமதி சால்",
+        "rolePermissions": "பாத்திரம் மற்றும் அனுமதிகள்",
+        "additionalSettings": "கூடுதல் அமைப்புகள்",
+        "contactInfo": "தொடர்பு தகவல்",
+        "otherSettings": "மற்ற அமைப்புகள்"
+      },
+      "rolePermissions": "பாத்திரம்: {role}",
+      "permissionsInclude": "இந෍த பாத்திரத்தில் இந෍த அனுமதிகள் இருக்கின்றன:",
+      "usernameNote": "பயனர்பெயரை மாற்ற முடியாது",
+      "usernameDescription": "தற்போதைய பயனர்பெயர்: {username}"
+    },
+    "edit": {
+      "title": "பயனரைத் திருத்தவும்",
+      "submit": "பயனரைப் புதுப்பிக்கவும்",
+      "sections": {
+        "basicInfo": "அடிப்படை தகவல்",
+        "pin": "PIN மேலாண்மை",
+        "rolePermissions": "பாத்திரம் மற்றும் அனுமதிகள்",
+        "additionalSettings": "கூடுதல் அமைப்புகள்"
+      },
+      "rolePermissions": "பாத்திரம்: {role}",
+      "permissionsInclude": "இந෍த பாத்திரத்தில் இந෍த அனுமதிகள் இருக்கின்றன:",
+      "usernameNote": "பயனர்பெயரை மாற்ற முடியாது",
+      "usernameDescription": "தற்போதைய பயனர்பெயர்: {username}",
+      "ownAccountNote": "நீங்கள் உங்கள் ச්வந෍த பாத்திரத்தை அல்லது நிலையை மாற்ற முடியாது"
+    },
+    "delete": {
+      "title": "பயனரை நீக்கவும்",
+      "confirmation": "{name} அவரை நீக்க விரும்புகிறீர்களா? இந෍த செயலை வாபச் செய෍ய முடியாது."
+    },
+    "resetPassword": {
+      "title": "கடவுச்சொல்லை மீட்டமைக்கவும்",
+      "confirmation": "இந෍த பயனரின் கடவுச்சொல்லை மீட்டமைக்க விரும்புகிறீர்களா?"
+    },
+    "fields": {
+      "username": "பயனர்பெயர்",
+      "name": "முழு பெயர்",
+      "email": "மின்னஞ்சல் முகவரி",
+      "phone": "தொலைபேசி எண்",
+      "password": "கடவுச்சொல்",
+      "newPassword": "புதிய கடவுச்சொல்",
+      "pin": "PIN",
+      "newPin": "புதிய PIN",
+      "role": "பாத்திரம்",
+      "preferredLanguage": "விரும்புவான மொழி",
+      "status": "கணக்கு நிலை",
+      "notes": "குறிப்புகள்",
+      "enablePin": "PIN இயக்கவும்"
+    },
+    "placeholders": {
+      "username": "பயனர்பெயரை உள்ளிடவும் (எழுத்துகள் மற்றும் எண்கள் மட்டும்)",
+      "name": "முழு பெயரை உள்ளிடவும்",
+      "email": "மின்னஞ்சல் முகவரியை உள்ளிடவும்",
+      "phone": "தொலைபேசி எண்ணை உள்ளிடவும்",
+      "password": "கடவுச்சொல்லை உள்ளிடவும் (குறைந෍தது 6 அக்கரங்கள்)",
+      "pin": "4-6 அங்க PIN உள்ளிடவும்",
+      "newPin": "புதிய PIN உள்ளிடவும் அல்லது தற்போதையதை வைத்து விட காலியாக விடவும்",
+      "notes": "இந෍த பயனரின் பற்றி எந෍த கூடுதல் குறிப்புகளினையும் உள்ளிடவும்"
+    },
+    "validation": {
+      "usernameRequired": "பயனர்பெயர் தேவை",
+      "usernameMinLength": "பயனர்பெயர் குறைந෍தது 3 அக்கரங்களாக இருக்க வேண்டும்",
+      "usernameFormat": "பயனர்பெயரில் எழுத்துகள் மற்றும் எண்கள் மட்டும் இருக்க வேண்டும்",
+      "usernameExists": "பயனர்பெயர் ஏற்கனவே இருக்கிறது",
+      "nameRequired": "முழு பெயர் தேவை",
+      "nameMinLength": "பெயர் குறைந෍தது 2 அக்கரங்களாக இருக்க வேண்டும்",
+      "emailFormat": "சரியான மின்னஞ்சல் முகவரியை உள்ளிடவும்",
+      "passwordRequired": "கடவுச்சொல் தேவை",
+      "passwordMinLength": "கடவுச்சொல் குறைந෍தது 6 அக்கரங்களாக இருக்க வேண்டும்",
+      "pinRequired": "PIN தேவை",
+      "pinFormat": "PIN 4-6 அங்கங்களாக இருக்க வேண்டும்",
+      "roleRequired": "பாத்திர தேர்வு தேவை"
+    },
+    "help": {
+      "pinSwitch": "PIN முலம் வேகமான உள்நுழைவை அனுமதிக்கவும்",
+      "pinDescription": "PIN முலம் முழு உள்நுழைவின்றி பயனர்கள் இடையே வேகமாக மாற அனுமதிக்கும்",
+      "pinEnabled": "PIN தற்போது இயக்கப்பட்டுள்ளது",
+      "pinDisabled": "PIN தற்போது முடக்கப்பட்டுள்ளது",
+      "pinWillBeRemoved": "முடக்குவது தற்போதைய PIN அவை நீக்கும்"
+    },
+    "permissions": {
+      "sales": "விற்பனை இடம்",
+      "inventory": "பொருள் மேலாண்மை",
+      "customers": "வாடிக்கையாளர் மேலாண்மை",
+      "suppliers": "சப்ளையர் மேலாண்மை",
+      "reports": "அறிக்கைகளைப் பார்க்கவும்",
+      "basic_reports": "அடிப்படை அறிக்கைகள்",
+      "settings": "கணினி அமைப்புகள்",
+      "users": "பயனர் மேலாண்மை",
+      "backup": "காப்பற்றல் மற்றும் மீட்டெடுப்பு",
+      "system": "கணினி நிர்வாகம்",
+      "admin": "முழு நிர்வாகம்"
+    },
+    "details": {
+      "sections": {
+        "basicInfo": "அடிப்படை தகவல்",
+        "rolePermissions": "பாத்திரம் மற்றும் அனுமதிகள்",
+        "activity": "செயலாளர் வரலாறு",
+        "notes": "குறிப்புகள்"
+      },
+      "accountStatus": "கணக்கு நிலை",
+      "userRole": "பயனர் பாத்திரம்",
+      "quickAccess": "வேகமான அணுகல்",
+      "pinEnabled": "PIN இயக்கப்பட்டுள்ளது",
+      "pinDisabled": "PIN முடக்கப்பட்டுள்ளது",
+      "role": "பாத்திரம்",
+      "permissions": "அனுமதிகள்",
+      "lastLogin": "கடைசி உள்நுழைவு",
+      "lastActivity": "கடைசி செயல்பாடு",
+      "accountCreated": "கணக்கு உருவாக்கப்பட்ட தேதி",
+      "lastUpdated": "கடைசியாக புதுப்பிக்கப்பட்ட தேதி",
+      "neverLoggedIn": "ஒருபோதும் உள்நுழையவில்லை",
+      "noActivity": "இற்கைய செயல்பாடு இல்லை"
+    },
+    "time": {
+      "today": "இன்று",
+      "yesterday": "நேற்று",
+      "daysAgo": "{days} நாட்களுக்கு முன்பு",
+      "weeksAgo": "{weeks} வாரங்களுக்கு முன்பு",
+      "monthsAgo": "{months} மாதங்களுக்கு முன்பு"
+    }
+  },
+  "languages": {
+    "en": "English",
+    "si": "සිංහල",
+    "ta": "தமிழ்"
   }
 }
