--- a/src/locales/si.json
+++ b/src/locales/si.json
@@ -4,12 +4,17 @@
     "tagline": "Ceybyte විසින් බලගන්වන ලදී"
   },
   "navigation": {
+    "dashboard": "ප්‍රධාන පුවරුව",
+    "pos": "විකුණුම් ස්ථානය",
     "sales": "විකුණුම්",
     "products": "නිෂ්පාදන",
     "customers": "ගනුදෙනුකරුවන්",
     "suppliers": "සැපයුම්කරුවන්",
     "reports": "වාර්තා",
-    "settings": "සැකසුම්"
+    "settings": "සැකසුම්",
+    "manage": "කළමනාකරණය",
+    "view": "බලන්න",
+    "configure": "වින්‍යාස කරන්න"
   },
   "common": {
     "save": "සුරකින්න",
@@ -21,9 +26,40 @@
     "loading": "පූරණය වෙමින්...",
     "error": "දෝෂය",
     "success": "සාර්ථකයි",
+    "warning": "අනතුරු ඇඟවීම",
+    "info": "තොරතුරු",
     "confirm": "තහවුරු කරන්න",
     "yes": "ඔව්",
-    "no": "නැහැ"
+    "no": "නැහැ",
+    "ok": "හරි",
+    "close": "වසන්න",
+    "back": "ආපසු",
+    "next": "ඊළඟ",
+    "previous": "පෙර",
+    "refresh": "නැවුම් කරන්න",
+    "clear": "ඉවත් කරන්න",
+    "reset": "නැවත සකසන්න",
+    "submit": "ඉදිරිපත් කරන්න",
+    "total": "එකතුව",
+    "subtotal": "උප එකතුව",
+    "discount": "වට්ටම",
+    "tax": "බදු",
+    "amount": "මුදල",
+    "quantity": "ප්‍රමාණය",
+    "price": "මිල",
+    "date": "දිනය",
+    "time": "වේලාව",
+    "name": "නම",
+    "description": "විස්තරය",
+    "status": "තත්ත්වය",
+    "active": "සක්‍රීය",
+    "inactive": "අක්‍රීය",
+    "continue": "ඉදිරියට",
+    "change": "වෙනස් කරන්න",
+    "select": "තෝරන්න",
+    "optional": "විකල්ප",
+    "user": "පරිශීලක",
+    "currency": "රු."
   },
   "sales": {
     "walkIn": "සාමාන්‍ය ගනුදෙනුකරු",
@@ -55,5 +91,78 @@
   "currency": {
     "symbol": "රු.",
     "format": "රු. {amount}"
+  },
+  "pos": {
+    "title": "විකුණුම් ස්ථානය",
+    "comingSoon": "POS අතුරුමුඛය ඉදිරි කාර්යයන්හිදී ක්‍රියාත්මක කරනු ලැබේ.",
+    "newSale": "නව විකුණුම",
+    "startNewSale": "නව විකුණුම් ගනුදෙනුවක් ආරම්භ කරන්න",
+    "startSale": "විකුණුම ආරම්භ කරන්න",
+    "pointOfSale": "විකුණුම් ස්ථානය",
+    "productSearch": "නිෂ්පාදන සෙවීම",
+    "shoppingCart": "සාප්පු කරත්තය",
+    "payment": "ගෙවීම",
+    "items": "අයිතම",
+    "searchProducts": "නිෂ්පාදන සොයන්න...",
+    "scanBarcode": "බාර්කෝඩ් ස්කෑන් කරන්න...",
+    "selectCategory": "කාණ්ඩය",
+    "clearFilters": "පෙරහන් ඉවත් කරන්න",
+    "products": "නිෂ්පාදන",
+    "recent": "මෑත",
+    "noProductsFound": "නිෂ්පාදන හමු නොවීය",
+    "noRecentProducts": "මෑත නිෂ්පාදන නැත",
+    "shortcuts": "F1: සෙවීම් අවධානය | F3: ගනුදෙනුකරු ප්‍රකාරය",
+    "selectCustomer": "ගනුදෙනුකරු තෝරන්න",
+    "customerName": "ගනුදෙනුකරුගේ නම",
+    "enterCustomerName": "ගනුදෙනුකරුගේ නම ඇතුළත් කරන්න",
+    "customerSearchNote": "අනාගත අනුවාදවල මෙයට ගනුදෙනුකරු සෙවීම සහ තේරීම ඇතුළත් වේ.",
+    "emptyCart": "කරත්තය හිස්",
+    "addProductsToCart": "විකුණුම ආරම්භ කිරීමට නිෂ්පාදන එකතු කරන්න",
+    "subtotal": "උප එකතුව",
+    "discount": "වට්ටම",
+    "total": "එකතුව",
+    "hold": "රඳවන්න",
+    "clear": "ඉවත් කරන්න",
+    "pay": "ගෙවන්න",
+    "editPrice": "මිල සංස්කරණය",
+    "product": "නිෂ්පාදනය",
+    "originalPrice": "මුල් මිල",
+    "newPrice": "නව මිල",
+    "discountAmount": "වට්ටම් මුදල",
+    "heldSales": "රඳවා ගත් විකුණුම්",
+    "retrieve": "ගන්න",
+    "walkInCustomer": "සාමාන්‍ය ගනුදෙනුකරු",
+    "noHeldSales": "රඳවා ගත් විකුණුම් නැත",
+    "cartShortcuts": "F4: විකුණුම රඳවන්න | F5: ගන්න | F12: ක්ෂණික මුදල්",
+    "selectItemsForPayment": "අයිතම තෝරා ගෙවීමට යන්න",
+    "paymentShortcuts": "ගෙවීම් කෙටිමං:",
+    "instantCash": "ක්ෂණික මුදල් විකුණුම",
+    "toggleCustomerMode": "ගනුදෙනුකරු ප්‍රකාරය මාරු කරන්න",
+    "paymentMethod": "ගෙවීම් ක්‍රමය",
+    "cash": "මුදල්",
+    "card": "කාඩ්පත",
+    "mobileMoney": "ජංගම මුදල්",
+    "credit": "ණය",
+    "amountTendered": "ලබා දුන් මුදල",
+    "quickAmounts": "ක්ෂණික මුදල්",
+    "change": "ඉතිරිය",
+    "amount": "මුදල",
+    "cardReference": "කාඩ් යොමු අංකය",
+    "enterCardReference": "කාඩ් යොමු අංකය ඇතුළත් කරන්න",
+    "mobileReference": "ජංගම ගෙවීම් යොමුව",
+    "enterMobileReference": "eZ Cash / mCash යොමුව ඇතුළත් කරන්න",
+    "supportedMobilePayments": "සහාය: eZ Cash, mCash සහ වෙනත් ජංගම මුදල් සේවා",
+    "creditAmount": "ණය මුදල",
+    "creditSaleNote": "මෙම විකුණුම ගනුදෙනුකරු ණය ගිණුමට එකතු කරනු ලැබේ",
+    "notes": "සටහන්",
+    "enterPaymentNotes": "ගෙවීම් සටහන් ඇතුළත් කරන්න...",
+    "processing": "සැකසෙමින්...",
+    "processPayment": "ගෙවීම සකසන්න",
+    "paymentComplete": "ගෙවීම සම්පූර්ණයි",
+    "skipReceipt": "රිසිට්පත මඟ හරින්න",
+    "printReceipt": "රිසිට්පත මුද්‍රණය",
+    "paymentSuccessful": "ගෙවීම සාර්ථකයි",
+    "receiptNumber": "රිසිට්පත",
+    "receiptPrintNote": "රිසිට්පත තාප මුද්‍රකයේ මුද්‍රණය කරනු ලැබේ"
   }
 }
