--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -4,12 +4,17 @@
     "tagline": "Ceybyte ஆல் இயக்கப்படுகிறது"
   },
   "navigation": {
+    "dashboard": "டாஷ்போர்டு",
+    "pos": "விற்பனை புள்ளி",
     "sales": "விற்பனை",
     "products": "பொருட்கள்",
     "customers": "வாடிக்கையாளர்கள்",
     "suppliers": "சப்ளையர்கள்",
     "reports": "அறிக்கைகள்",
-    "settings": "அமைப்புகள்"
+    "settings": "அமைப்புகள்",
+    "manage": "நிர்வகிக்கவும்",
+    "view": "பார்க்கவும்",
+    "configure": "கட்டமைக்கவும்"
   },
   "common": {
     "save": "சேமிக்கவும்",
@@ -21,9 +26,40 @@
     "loading": "ஏற்றுகிறது...",
     "error": "பிழை",
     "success": "வெற்றி",
+    "warning": "எச்சரிக்கை",
+    "info": "தகவல்",
     "confirm": "உறுதிப்படுத்தவும்",
     "yes": "ஆம்",
-    "no": "இல்லை"
+    "no": "இல்லை",
+    "ok": "சரி",
+    "close": "மூடவும்",
+    "back": "பின்",
+    "next": "அடுத்து",
+    "previous": "முந்தைய",
+    "refresh": "புதுப்பிக்கவும்",
+    "clear": "அழிக்கவும்",
+    "reset": "மீட்டமைக்கவும்",
+    "submit": "சமர்ப்பிக்கவும்",
+    "total": "மொத்தம்",
+    "subtotal": "துணை மொத்தம்",
+    "discount": "தள்ளுபடி",
+    "tax": "வரி",
+    "amount": "தொகை",
+    "quantity": "அளவு",
+    "price": "விலை",
+    "date": "தேதி",
+    "time": "நேரம்",
+    "name": "பெயர்",
+    "description": "விளக்கம்",
+    "status": "நிலை",
+    "active": "செயலில்",
+    "inactive": "செயலில் இல்லை",
+    "continue": "தொடரவும்",
+    "change": "மாற்றவும்",
+    "select": "தேர்ந்தெடுக்கவும்",
+    "optional": "விருப்பமான",
+    "user": "பயனர்",
+    "currency": "ரூ."
   },
   "sales": {
     "walkIn": "நடைபாதை வாடிக்கையாளர்",
@@ -55,5 +91,78 @@
   "currency": {
     "symbol": "ரூ.",
     "format": "ரூ. {amount}"
+  },
+  "pos": {
+    "title": "விற்பனை புள்ளி",
+    "comingSoon": "POS இடைமுகம் வரவிருக்கும் பணிகளில் செயல்படுத்தப்படும்.",
+    "newSale": "புதிய விற்பனை",
+    "startNewSale": "புதிய விற்பனை பரிவர்த்தனையைத் தொடங்கவும்",
+    "startSale": "விற்பனையைத் தொடங்கவும்",
+    "pointOfSale": "விற்பனை புள்ளி",
+    "productSearch": "பொருள் தேடல்",
+    "shoppingCart": "ஷாப்பிங் கார்ட்",
+    "payment": "பணம் செலுத்துதல்",
+    "items": "பொருட்கள்",
+    "searchProducts": "பொருட்களைத் தேடவும்...",
+    "scanBarcode": "பார்கோடை ஸ்கேன் செய்யவும்...",
+    "selectCategory": "வகை",
+    "clearFilters": "வடிப்பான்களை அழிக்கவும்",
+    "products": "பொருட்கள்",
+    "recent": "சமீபத்திய",
+    "noProductsFound": "பொருட்கள் கிடைக்கவில்லை",
+    "noRecentProducts": "சமீபத்திய பொருட்கள் இல்லை",
+    "shortcuts": "F1: தேடல் கவனம் | F3: வாடிக்கையாளர் முறை",
+    "selectCustomer": "வாடிக்கையாளரைத் தேர்ந்தெடுக்கவும்",
+    "customerName": "வாடிக்கையாளர் பெயர்",
+    "enterCustomerName": "வாடிக்கையாளர் பெயரை உள்ளிடவும்",
+    "customerSearchNote": "எதிர்கால பதிப்புகளில் இது வாடிக்கையாளர் தேடல் மற்றும் தேர்வை உள்ளடக்கும்.",
+    "emptyCart": "கார்ட் காலியாக உள்ளது",
+    "addProductsToCart": "விற்பனையைத் தொடங்க பொருட்களைச் சேர்க்கவும்",
+    "subtotal": "துணை மொத்தம்",
+    "discount": "தள்ளுபடி",
+    "total": "மொத்தம்",
+    "hold": "பிடிக்கவும்",
+    "clear": "அழிக்கவும்",
+    "pay": "பணம் செலுத்தவும்",
+    "editPrice": "விலையைத் திருத்தவும்",
+    "product": "பொருள்",
+    "originalPrice": "அசல் விலை",
+    "newPrice": "புதிய விலை",
+    "discountAmount": "தள்ளுபடி தொகை",
+    "heldSales": "நிறுத்தப்பட்ட விற்பனை",
+    "retrieve": "மீட்கவும்",
+    "walkInCustomer": "நடைபாதை வாடிக்கையாளர்",
+    "noHeldSales": "நிறுத்தப்பட்ட விற்பனை இல்லை",
+    "cartShortcuts": "F4: விற்பனையை நிறுத்தவும் | F5: மீட்கவும் | F12: உடனடி பணம்",
+    "selectItemsForPayment": "பொருட்களைத் தேர்ந்தெடுத்து பணம் செலுத்தவும்",
+    "paymentShortcuts": "பணம் செலுத்தும் குறுக்குவழிகள்:",
+    "instantCash": "உடனடி பண விற்பனை",
+    "toggleCustomerMode": "வாடிக்கையாளர் முறையை மாற்றவும்",
+    "paymentMethod": "பணம் செலுத்தும் முறை",
+    "cash": "பணம்",
+    "card": "அட்டை",
+    "mobileMoney": "மொபைல் பணம்",
+    "credit": "கடன்",
+    "amountTendered": "வழங்கப்பட்ட தொகை",
+    "quickAmounts": "விரைவு தொகைகள்",
+    "change": "மாற்றம்",
+    "amount": "தொகை",
+    "cardReference": "அட்டை குறிப்பு எண்",
+    "enterCardReference": "அட்டை குறிப்பு எண்ணை உள்ளிடவும்",
+    "mobileReference": "மொபைல் பணம் செலுத்தும் குறிப்பு",
+    "enterMobileReference": "eZ Cash / mCash குறிப்பை உள்ளிடவும்",
+    "supportedMobilePayments": "ஆதரவு: eZ Cash, mCash மற்றும் பிற மொபைல் பண சேவைகள்",
+    "creditAmount": "கடன் தொகை",
+    "creditSaleNote": "இந்த விற்பனை வாடிக்கையாளர் கடன் கணக்கில் சேர்க்கப்படும்",
+    "notes": "குறிப்புகள்",
+    "enterPaymentNotes": "பணம் செலுத்தும் குறிப்புகளை உள்ளிடவும்...",
+    "processing": "செயலாக்கம்...",
+    "processPayment": "பணம் செலுத்துதலைச் செயலாக்கவும்",
+    "paymentComplete": "பணம் செலுத்துதல் முடிந்தது",
+    "skipReceipt": "ரசீதைத் தவிர்க்கவும்",
+    "printReceipt": "ரசீதை அச்சிடவும்",
+    "paymentSuccessful": "பணம் செலுத்துதல் வெற்றிகரமாக",
+    "receiptNumber": "ரசீது",
+    "receiptPrintNote": "ரசீது தெர்மல் பிரிண்டரில் அச்சிடப்படும்"
   }
 }
